# Vulkano3DModelViewer

./: .gitignore  Cargo.toml  LICENSE  README.md
shaders/: frag.glsl  vert.glsl
src/: camera.rs  config.rs  main.rs  model.rs  shader.rs  vulkano_wrapper.rs  window.rs
src/vulkano_wrapper/: command_buffer.rs  memory_allocator.rs  model.rs
