[package]
name = "vulkano_3d_model_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
cgmath = "0.18.0"
image = "0.24.6"
obj-rs = "0.7.1"
serde = "1.0.164"
serde_json = "1.0.99"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"

[profile.dev]
opt-level = 1